2010-01-25  Atsushi Enomoto <atsushi@ximian.com>

	* XPathEditableDocument.cs : add support for WriteRaw().
	  Patch by Adriaan van Kekem, closing bug #560838.

2009-11-17  Atsushi Enomoto <atsushi@ximian.com>

	* XPathEditableDocument.cs : WriteAttributeString() is allowed on
	  an appended child on .NET, though IMHO incorrectly.
	  Fixed bug #554845.

2009-05-15  Atsushi Enomoto <atsushi@ximian.com>

	* XPathNavigatorReader.cs : LookupNamespace() in XmlReader from
	  ReadSubtree() should work correctly on text nodes.

2008-09-10  Atsushi Enomoto <atsushi@ximian,com>

	* XPathEditableDocument.cs : added some overrides.

2008-06-04  Atsushi Enomoto <atsushi@ximian.com>

	* DTMXPathDocumentBuilder2.cs : fixed bug #378239.cs. Merge
	  sequential text nodes in correct way, say, whitespace entities
	  inside text should be merged (while they should be discarded around
	  CDATA).

2008-04-02  Atsushi Enomoto <atsushi@ximian.com>

	* XPathEditableDocument.cs : it should not expect ParentNode for
	  OwnerElement. Fixed bug #376210.

2008-03-17  Atsushi Enomoto <atsushi@ximian.com>

	* DTMXPathDocumentBuilder2.cs : allow document fragment as XmlReader
	  input. Fixed bug #324606.

2007-07-02  Atsushi Enomoto <atsushi@ximian.com>

	* DTMXPathDocumentBuilder2.cs : do not bork at non-document element
	  in XmlReader. Fixed bug #81932.

2007-02-01  Atsushi Enomoto <atsushi@ximian.com>

	* DTMXPathDocumentWriter2.cs : supply prefix when it was not passed.

2007-01-31  Atsushi Enomoto <atsushi@ximian.com>

	* DTMXPathNavigator2.cs : cosmetic performance improvement.

2007-01-05  Atsushi Enomoto <atsushi@ximian.com>

	* DTMXPathDocumentBuilder2.cs : fixed incorrect namespace node links
	  which happened to following siblings of a node with namespaces.

2006-12-05  Atsushi Enomoto <atsushi@ximian.com>

	* XPathEditableDocument.cs : those writers should lookup prefix when
	  WriteStartElement/WriteStartAttribute are passed null prefix.